<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_second_mode"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context="com.example.clicker.SecondModeActivity" android:orientation="vertical" android:weightSum="1">

    <TextView
            android:text="@string/second_mode_headline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/textView2" android:gravity="center"/>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/twentyRubButton" android:layout_weight="1"
                android:text="@string/first_cost"
                android:onClick="onFirstCostClick"
        />
        <Button
                android:layout_width="wrap_content"
                android:onClick="onSecondCostClick"
                android:layout_height="wrap_content" android:id="@+id/twentyTwoRubButton" android:layout_weight="1"
                android:text="@string/second_cost"/>
        <Button
                android:layout_width="wrap_content"
                android:onClick="onThirdCostClick"
                android:layout_height="wrap_content" android:id="@+id/twentyFiveRubButton" android:layout_weight="1"
                android:text="@string/third_cost"/>
    </LinearLayout>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/editText" android:hint="@string/second_mode_second_headline"
            android:gravity="center"/>
    <Button
            android:text="@string/next"
            android:onClick="onIndividualButtonClick"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/individualButton"/>
</LinearLayout>
