<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_conductor"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context="com.example.clicker.ConductorActivity" android:orientation="vertical">

    <Chronometer
            android:layout_width="match_parent"
            android:id="@+id/chrn"
            android:layout_height="wrap_content" android:gravity="center"
            android:textSize="50dp"/>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <Button
                android:layout_width="match_parent"
                android:onClick="onConductorButtonClick"
                android:layout_height="201dp" android:id="@+id/conductorButton"/>
        <Button
                android:text="@string/stop"
                android:layout_width="match_parent"
                android:onClick="onStopButtonClick"
                android:layout_height="wrap_content" android:id="@+id/stopButton"/>
        <Button
                android:text="@string/resume"
                android:layout_width="match_parent"
                android:onClick="onSecondModeResumeClick"
                android:layout_height="wrap_content" android:id="@+id/button6"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <Button
                android:text="@string/stats"
                android:layout_width="wrap_content"
                android:onClick="onSecondModeStatsButtonClick"
                android:layout_height="wrap_content" android:layout_weight="1" android:id="@+id/secondMoneStatButton"/>
        <Button
                android:text="@string/clean"
                android:layout_width="wrap_content"
                android:onClick="onSecondModeCleanButtonClick"
                android:layout_height="wrap_content" android:id="@+id/secondModeCleanButton" android:layout_weight="1"/>
    </LinearLayout>
</LinearLayout>
