<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context="com.example.Clicker.MainActivity" android:orientation="vertical"
        tools:background="@color/background" android:background="@color/background" android:weightSum="1">

    <TextView
            android:text="@string/headline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/textView" android:gravity="center"
            android:textColor="@android:color/background_light"
            android:background="@color/background" tools:background="@color/background" android:textSize="36sp"
            android:autoText="false" android:textColorHint="@android:color/background_dark"/>
    <Button
            android:text="@string/first_mode"
            android:layout_width="match_parent"
            android:onClick="onFirstModeButtonClick"
            android:layout_height="wrap_content" android:id="@+id/firstModeButton" android:layout_weight="0.03"
            android:textSize="18dp"/>
    <Button
            android:text="@string/second_mode"
            android:layout_width="match_parent"
            android:onClick="onSecondModeButtonClick"
            android:layout_weight="0.03"
            android:layout_height="wrap_content" android:id="@+id/secondModeButton" android:textSize="18dp"/>
</LinearLayout>
