<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_first_mode"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        tools:context="com.example.clicker.FirstModeActivity" android:weightSum="1">

    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/firstModeHeadline" android:hint="@string/first_mode_headline"
            android:gravity="center_vertical|center" android:textSize="14sp"/>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:layout_weight="0.97" android:id="@+id/clickButtonLayout">
        <Button
                android:text=""
                android:layout_width="match_parent"
                android:onClick="onClickButtonClick"
                android:layout_height="match_parent" android:id="@+id/clickButton"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/buttonLayout">
        <Button
                android:text="@string/stats"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onStatsButtonClick"
                android:id="@+id/statsButton"
                android:elevation="1dp"/>
        <Button
                android:text="@string/clean"
                android:layout_width="0dp"
                android:onClick="onCleanButtonClick"
                android:layout_height="wrap_content" android:layout_weight="1"
                android:id="@+id/cleanButton"/>
    </LinearLayout>
</LinearLayout>
